# gaggimate-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TESTING_CHECKLIST.md  TODO.md  grind-map.example.md  package.json  progress.md  pyproject.toml  user-setup.example.md
.claude/: CLAUDE-Code.md  settings.json
agent-instructions/: INSTRUCTIONS.md
agent-knowledge/: BASKETS.md  BEAN_FRESHNESS_AND_STORAGE.md  ESPRESSO_BREWING_BASICS.md  ESPRESSO_TASTING_GUIDE.md  GAGGIMATE_PROFILE_CREATION_GUIDE.md  MILK_AND_DRINKS.md  PRESSURE_GUIDE.md
agent-skills/: HOW TO ZIP SKILLS.md
archive/: explore_api.py
desktop-app-skills/: HOW TO ZIP SKILLS.md  consult.md  diagnose.md  feedback.md  new-coffee.md
docs/: PR_DESCRIPTION.md  TESTING_CHECKLIST.md  TONIGHT_TESTING_PLAN.md
gaggimate-mcp-python/: .gitignore  README.md  main.py
knowledge/: COFFEE_PROCESSING.md  ESPRESSO_BREWING_BASICS.md  ESPRESSO_TASTING_GUIDE.md  EXTRACTION_SCIENCE.md  GAGGIMATE_PROFILE_CREATION_GUIDE.md  HOME_ROASTING_AND_BLENDS.md  PRESSURE_GUIDE.md  PROFILE_LIBRARY.md  SPECIAL_CATEGORIES.md
plans/: 001-fix-diagnostics-dns-resolution.md
scripts/: analysis_report.json  analyze_knowledge.py  stamp-and-zip.sh
tests/: test_api_http.py  test_api_websocket.py  test_config.py  test_diagnostics.py  test_errors.py  test_logging.py  test_models_profile.py  test_models_rating.py  test_parsers_index.py  test_parsers_shot.py  test_resources.py  test_storage_markdown.py  test_transformers_shot.py
typescript-reference/: package-lock.json
user/: grind-map.example.md  user-setup.example.md
(+67 files in other folders)
